package ucf.assignments;

import java.util.List;

public class Inventory {
    private List<InventoryItem> items;
    private SortBy sortBy;
    private Integer nextId = 0;

    public List<InventoryItem> getItems(String filter) {

        return null;
    }

    public void addItems() {

    }

    public void deleteItem(Integer id) {

    }

    private InventoryItem  findItemByID(Integer id) {

        return null;
    }

}
