package ucf.assignments;

import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.control.TextField;
import javafx.scene.layout.Pane;
import javafx.scene.layout.VBox;

import java.net.URL;
import java.util.ResourceBundle;

public class InventoryController implements Initializable {
    private Inventory inventory;

    @FXML private Pane mainPane;
    @FXML private VBox inventoryContents;
    @FXML private TextField searchBox;

    @Override
    public void initialize(URL location, ResourceBundle resources) {

    }

    private void addItem() {

    }

    private void removeItem() {

    }

    private void toggleIsEditing() {

    }

    private void confirmEdit() {

    }

    private void cancelEdit() {

    }

    private void sortBySerialNumber() {

    }

    private void sortByName() {

    }

    private void sortByValue() {

    }

    private void onChangeSearch() {

    }

}
