package ucf.assignments;

public class InventoryItem {
}
