package ucf.assignments;

public class InventoryRenderer {
}
