package ucf.assignments;

public enum SortBy {
    SERIALNUMBER,
    NAME,
    VALUE,
    NONE
}
